GNU C Intro and Reference - ChangeLog


-----

Copyright (C) 2022, 2023 Free Software Foundation, Inc.
Copyright (C) 2022, 2023 Richard Stallman

Copying and distribution of this file, with or without modification,
are permitted in any medium without royalty provided the copyright
notice and this notice are preserved.  This file is offered as-is,
without any warranty.