@@ -1,0 +1,3 @@
+info_TEXINFOS = c.texi
+c_TEXINFOS = cpp.texi fp.texi fdl.texi gpl.texi
+dist_doc_DATA = c.pdf
